--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "turf": "^3.0.14",
     "web-vitals": "^2.1.4"
   },
